# terlik.py

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/terlik/: __init__.py  core.py  detector.py  normalizer.py  patterns.py  types.py
src/terlik/dictionary/: core.py
src/terlik/lang/: __init__.py
src/terlik/lang/en/: __init__.py  dictionary.json
src/terlik/lang/tr/: dictionary.json
terlik/: cleaner.py  fuzzy.py  terlik.py  types.py  utils.py
terlik/dictionary/: __init__.py  schema.py
terlik/lang/: types.py
terlik/lang/de/: __init__.py  config.py  dictionary.json
terlik/lang/en/: config.py
terlik/lang/es/: __init__.py  config.py
terlik/lang/tr/: config.py
tests/: test_adversarial_audit.py  test_cleaner.py  test_detector.py  test_dictionary.py  test_edge_cases.py  test_entry_points.py  test_extend_dictionary.py  test_fuzzy.py  test_integration.py  test_lazy_compilation.py  test_normalizer.py  test_profanity.py  test_redos.py  test_spdg.py  test_strictness.py  test_suffix.py  test_terlik.py
