[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terlik"
version = "0.1.0"
description = "Multi-language profanity detection and filtering engine."
authors = [
    { name = "Alp Sakaci" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
include = ["terlik*"]

[tool.setuptools.package-data]
"terlik.lang.tr" = ["dictionary.json"]
"terlik.lang.en" = ["dictionary.json"]
"terlik.lang.es" = ["dictionary.json"]
"terlik.lang.de" = ["dictionary.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
